...
import com.github.meeplemeet.ui.theme.Dimensions

object SignInScreenTestTags {
  const val EMAIL_FIELD = "email_field"
  const val PASSWORD_VISIBILITY_TOGGLE = "password_visibility_toggle"
  const val PASSWORD_FIELD = "password_field"
  const val SIGN_IN_BUTTON = "sign_in_button"
  const val GOOGLE_SIGN_IN_BUTTON = "google_sign_in_button"
  const val LOADING_INDICATOR = "loading_indicator"
  const val SIGN_UP_BUTTON = "sign_up_button"
}

object SignInScreenUi {
  val mediumSpacing = Dimensions.Spacing.medium
  val extraLargePadding = Dimensions.Padding.extraLarge
  val smallPadding = Dimensions.Padding.small
...
